2.91 texture alpha is not transparent #80297

Closed
opened 2020-08-31 23:21:16 +02:00 by Mikhail Rachinskiy · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 03:47, hash: 6879798202
Worked: 2.90 release

Short description of error
Texture alpha is not transparent.
alpha_texture_comparison.png

Exact steps for others to reproduce the error

  • Open attached blend file.
  • Run Script.

alpha_texture.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 03:47, hash: `6879798202` Worked: 2.90 release **Short description of error** Texture alpha is not transparent. ![alpha_texture_comparison.png](https://archive.blender.org/developer/F8827242/alpha_texture_comparison.png) **Exact steps for others to reproduce the error** - Open attached blend file. - Run Script. [alpha_texture.blend](https://archive.blender.org/developer/F8827272/alpha_texture.blend)
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hrmf, can confirm, checking...

Hrmf, can confirm, checking...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

This is a bit hard to bisect, because along the continuous stream of GPU refactors relating #68990, the example also crashed a lot in between, but this started somewhere between 5c78c16b14 (good) and e4932d1167 (bad)

This is a bit hard to bisect, because along the continuous stream of GPU refactors relating #68990, the example also crashed a lot in between, but this started somewhere between 5c78c16b14 (good) and e4932d1167 (bad)

Added subscriber: @2046411367

Added subscriber: @2046411367

This issue was referenced by bf3f4da947

This issue was referenced by bf3f4da9472516be12dcc69740fa69b6d72f1274

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-09-12 17:36:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80297
No description provided.